PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Add 'expat' as possible external dependency
pts-core: Various PDF report improvements
pts-core: Also dynamically increase run count if any results outside 3-sigma limit
pts_Graph: Fix for displaying line graphs with very small values
phodevi: Support reading sys.power via IPMI PS1_Input_Power/PS2_Input_Power
phodevi: More robust Arm CPU model detection improvements
pts-core: Improve MultiMatch in test result parser
pts_Graph: Add side-by-side 2-way comparison graph
pts-core: Add IGNORE_RUNS environment variable
pts-core: Add result-file-confidence sub-command

Phoronix Test Suite 8.8.1-Hvaler
30 May 2019

pts-core: Various minor tweaks/fixes
phodevi: Fix Linux CPU thread detection in some scenarios where inner-cores may be offlined
phodevi: More robust CPU vulnerability reporting
phodevi: Add initial reporting for Windows vulnerabilities via mdstool-cli

Phoronix Test Suite 8.8.0-Hvaler
13 May 2019

pts-core: Report on the POWER SMT setting in notes
pts-core: Add new/updated suite reporting
pts-core: In build-suite allow not binding test profile versions
pts-core: For list-suites, only show suites that have been updated within the past four years
pts_Graph: Report N on horizontal bar graphs
phodevi: Intel Node Manager power_meter support for sys.power sensor

Phoronix Test Suite 8.8.0 Milestone 3
9 May 2019

pts-core: Add experimental dynamic-result-viewer
pts-core: Allow marking of test profile download files as optional
pts-core: Add "everything" virtual suite
pts-core: Set MESA_VK_WSI_PRESENT_MODE=immediate by default to work around possible 60 FPS RADV bug
pts-core: Rename remove-from-result-file to remove-run-from-result-file
pts-core: Add remove-results-from-result-file sub-command
phodevi: Detect AVX-512 VNNI
phodevi: Fix OpenJDK Java version detection
phodevi: Expand memory temperature sensor to work for some ARM SBCs
phodevi: Multi-monitor detection improvements