@@ -3,8 +3,8 @@
 /*
 	Phoronix Test Suite
 	URLs: http://www.phoronix.com, http://www.phoronix-test-suite.com/
-	Copyright (C) 2014 - 2018, Phoronix Media
-	Copyright (C) 2014 - 2018, Michael Larabel
+	Copyright (C) 2014 - 2019, Phoronix Media
+	Copyright (C) 2014 - 2019, Michael Larabel
 
 	This program is free software; you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
@@ -48,7 +48,7 @@ class auto_sort_result_file implements pts_option_interface
 		sort($result_file_identifiers);
 		$result_file->reorder_runs($result_file_identifiers);
 		pts_client::save_test_result($result_file->get_file_location(), $result_file->get_xml());
-		pts_client::display_web_page(PTS_SAVE_RESULTS_PATH . $args[0] . '/index.html');
+		pts_client::display_result_view($result_file, false);
 	}
 }
 
