@@ -62,7 +62,7 @@ class remove_run_from_result_file implements pts_option_interface
 		}
 
 		pts_client::save_test_result($result_file->get_file_location(), $result_file->get_xml());
-		pts_client::display_web_page($result_dir . '/index.html');
+		pts_client::display_result_view($result_file, false);
 	}
 }
 
